removed empty cell

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c93ed06516f949d2aa22af22358d4da9",
+       "model_id": "38cae1342cea4749ab833b356bf8814f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&x-fcs-context=zeebrieven&maximumRecords=20&query=[lemma=\"bak\"]\n"
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&x-fcs-context=opensonar&maximumRecords=20&query=[lemma=\"bok\"]\n"
      ]
     },
     {
@@ -119,66 +119,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>trans als meede de vlakke</td>\n",
-       "      <td>Bakke</td>\n",
-       "      <td>en so het holle Bakken</td>\n",
+       "      <td>garantie te mokken en te</td>\n",
+       "      <td>bokken</td>\n",
+       "      <td>ze en tis niks dat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bakke en so het holle</td>\n",
-       "      <td>Bakken</td>\n",
-       "      <td>waare zoude meer waard zyn</td>\n",
+       "      <td>dag in bed liggen en</td>\n",
+       "      <td>bokken</td>\n",
+       "      <td>das mijn oplossing en denken</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Taafels Stoelen Vlakke &amp; holle</td>\n",
-       "      <td>Bakken,</td>\n",
-       "      <td>Kurken zyn hier alle seer</td>\n",
+       "      <td>kameel errond krijgen of stinkende</td>\n",
+       "      <td>bok</td>\n",
+       "      <td>: - P</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dat gij uijt geen houte</td>\n",
-       "      <td>backe</td>\n",
-       "      <td>eten sult en met een</td>\n",
+       "      <td>vreemdeling is steeds de zonde</td>\n",
+       "      <td>bok</td>\n",
+       "      <td>en groot dutske en de</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Giessendam, als meede aan Neef</td>\n",
-       "      <td>Bak,</td>\n",
-       "      <td>Zoo UE: occasie kan vinden,</td>\n",
+       "      <td>voor lesbo's allemaal over den</td>\n",
+       "      <td>bok</td>\n",
+       "      <td>springen dan scheurt het ook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>hij ook, heeft gezegt, geen</td>\n",
-       "      <td>bakgen</td>\n",
-       "      <td>tot een wagen voor UWelEds</td>\n",
+       "      <td>, weer zo een bruine</td>\n",
+       "      <td>bok</td>\n",
+       "      <td>minder , er moesten er</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>voet 3 duim, waarin een</td>\n",
-       "      <td>Bakgen</td>\n",
-       "      <td>voor een wagentge aan P.S.</td>\n",
+       "      <td>genomen en Leterme bij de</td>\n",
+       "      <td>bok</td>\n",
+       "      <td>heeft gezet , tenzij ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>’t Was een schouwspel een</td>\n",
-       "      <td>bak</td>\n",
-       "      <td>wierd omgesmeten en de equipagie</td>\n",
+       "      <td>: Meneer of mevrouw de</td>\n",
+       "      <td>Bok</td>\n",
+       "      <td>? Bob of Annie de</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>np 17 oktober?Kijk eens op</td>\n",
+       "      <td>bokkie</td>\n",
+       "      <td>zijn site en je zal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>in een stal bij een</td>\n",
+       "      <td>bok</td>\n",
+       "      <td>konden blijven . De fransman</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      left context     word                      right context\n",
-       "0       trans als meede de vlakke     Bakke             en so het holle Bakken\n",
-       "1           Bakke en so het holle    Bakken         waare zoude meer waard zyn\n",
-       "2  Taafels Stoelen Vlakke & holle   Bakken,          Kurken zyn hier alle seer\n",
-       "3         dat gij uijt geen houte     backe               eten sult en met een\n",
-       "4  Giessendam, als meede aan Neef      Bak,        Zoo UE: occasie kan vinden,\n",
-       "5     hij ook, heeft gezegt, geen    bakgen         tot een wagen voor UWelEds\n",
-       "6         voet 3 duim, waarin een    Bakgen         voor een wagentge aan P.S.\n",
-       "7       ’t Was een schouwspel een       bak   wierd omgesmeten en de equipagie"
+       "                          left context    word                  right context\n",
+       "0            garantie te mokken en te   bokken             ze en tis niks dat\n",
+       "1                dag in bed liggen en   bokken   das mijn oplossing en denken\n",
+       "2  kameel errond krijgen of stinkende      bok                          : - P\n",
+       "3      vreemdeling is steeds de zonde      bok          en groot dutske en de\n",
+       "4      voor lesbo's allemaal over den      bok   springen dan scheurt het ook\n",
+       "5                , weer zo een bruine      bok         minder , er moesten er\n",
+       "6           genomen en Leterme bij de      bok       heeft gezet , tenzij ...\n",
+       "7              : Meneer of mevrouw de      Bok              ? Bob of Annie de\n",
+       "8          np 17 oktober?Kijk eens op   bokkie            zijn site en je zal\n",
+       "9                 in een stal bij een      bok   konden blijven . De fransman"
       ]
      },
      "metadata": {},
@@ -232,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -240,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "149e54b073d14c7090beadfbe4df2b01",
+       "model_id": "ee54a195931c49cb991ed9c8ad1ba5ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
