moved library into main file and tried to make collapsible headings work

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -11,6 +11,265 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Library functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UI:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "DEFAULT_QUERY = r'[lemma=\"boek\"]'\n",
+    "DEFAULT_CORPUS = \"chn\"\n",
+    "\n",
+    "def create_corpus_ui():\n",
+    "    # Create UI elements\n",
+    "    corpusQueryField = widgets.Text(description=\"<b>CQL query:</b>\", value=DEFAULT_QUERY)\n",
+    "    corpusField = widgets.Dropdown(\n",
+    "        options=['chn', 'opensonar', 'zeebrieven', 'gysseling', 'nederlab'],\n",
+    "        value=DEFAULT_CORPUS,\n",
+    "        description='<b>Corpus:</b>',\n",
+    "    )\n",
+    "    '''corpusSearchButton = widgets.Button(\n",
+    "        description='Search',\n",
+    "        button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "        tooltip='Search',\n",
+    "    )\n",
+    "    # Handle events\n",
+    "    corpusSearchButton.on_click(corpus_search)'''\n",
+    "\n",
+    "    # Stack UI elements in vertical box and display\n",
+    "    corpusUiBox = widgets.VBox([corpusQueryField,corpusField])\n",
+    "    display(corpusUiBox)\n",
+    "    \n",
+    "    # Return fields, so their contents are accessible from the global namespace of the Notebook\n",
+    "    return corpusQueryField, corpusField\n",
+    "\n",
+    "def create_lexicon_ui():\n",
+    "    DEFAULT_SEARCHWORD = 'boek'\n",
+    "    DEFAULT_LEXICON = \"diamant\"\n",
+    "\n",
+    "    # Create UI elements\n",
+    "    searchWordField = widgets.Text(description=\"<b>Word:</b>\", value=DEFAULT_SEARCHWORD)\n",
+    "    lexiconField = widgets.Dropdown(\n",
+    "        options=['diamant'],\n",
+    "        value=DEFAULT_LEXICON,\n",
+    "        description='<b>Lexicon:</b>',\n",
+    "    )\n",
+    "    '''lexSearchButton = widgets.Button(\n",
+    "        description='Search',\n",
+    "        button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "        tooltip='Search',\n",
+    "    )\n",
+    "    # Handle events\n",
+    "    lexSearchButton.on_click(lexicon_search)'''\n",
+    "    # Stack UI elements in vertical box and display\n",
+    "    lexUiBox = widgets.VBox([searchWordField,lexiconField])\n",
+    "    display(lexUiBox)\n",
+    "    return searchWordField, lexiconField"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Queries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_query(word, lexicon):\n",
+    "    if (lexicon==\"anw\"):\n",
+    "        subpart = 'FILTER ( regex(?lemma, \"'+word+'\") || regex(?definition, \"'+word+'\") ) .\\n'\n",
+    "        query = \"\"\"PREFIX ontolex: <http://www.w3.org/ns/lemon/ontolex#>\\n\n",
+    "                  PREFIX anw: <http://rdf.ivdnt.org/lexica/anw>\\n\n",
+    "                  PREFIX anwsch: <http://rdf.ivdnt.org/schema/anw/>\\n\n",
+    "                  PREFIX lemon: <http://lemon-model.net/lemon#>\\n\n",
+    "                  \\n\n",
+    "                  SELECT ?lemId ?lemma ?writtenForm ?definition ?definitionComplement\\n\n",
+    "                  FROM <http://rdf.ivdnt.org/lexica/anw>\\n\n",
+    "                  WHERE {\\n\n",
+    "                      ?lemId rdfs:label ?lemma .\\n\n",
+    "                      ?lemId ontolex:sense ?senseId .\\n\n",
+    "                      ?senseId lemon:definition ?definitionId .\\n\n",
+    "                      ?definitionId lemon:value ?definition .\\n\n",
+    "                      OPTIONAL { ?definitionId anwsch:definitionComplement ?definitionComplement .}\\n\n",
+    "                      OPTIONAL { ?lemId ontolex:canonicalForm ?lemCFId . \\n\n",
+    "                          ?lemCFId ontolex:writtenRepresentation ?writtenForm . }\\n\n",
+    "                      \"\"\"+subpart+\"\"\"\\n\n",
+    "                      }\\n\"\"\"\n",
+    "    elif (lexicon==\"diamant\"):\n",
+    "        query = \"\"\"\n",
+    "        PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>\n",
+    "        prefix prov: <http://www.w3.org/ns/prov#>\n",
+    "        prefix diamant: <http://rdf.ivdnt.org/schema/diamant#>\n",
+    "        prefix lexinfo: <http://www.lexinfo.net/ontology/2.0/lexinfo#>\n",
+    "        prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
+    "        prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n",
+    "        prefix lemon: <http://lemon-model.net/lemon#>\n",
+    "        prefix ontolex: <http://www.w3.org/ns/lemon/ontolex#>\n",
+    "        prefix ud: <http://universaldependencies.org/u/pos/>\n",
+    "        prefix skos: <http://www.w3.org/2004/02/skos/core#>\n",
+    "        prefix dcterms: <http://purl.org/dc/terms/>\n",
+    "        prefix dc: <http://purl.org/dc/terms/>\n",
+    "\n",
+    "        select ?n_entry ?n_form ?n_ontolex_writtenRep ?n_syndef ?n_sensedef ?n_sensedef_definitionText ?n_syndef_definitionText ?n_sense ?inputMode ?wy_f_show ?wy_t_show\n",
+    "        where\n",
+    "        {\n",
+    "        graph ?g\n",
+    "        {\n",
+    "        {\n",
+    "            { ?n_form ontolex:writtenRep ?n_ontolex_writtenRep .\n",
+    "              values ?n_ontolex_writtenRep  { \\\"\"\"\" + word + \"\"\"\\\" } } .\n",
+    "            { ?n_entry a ontolex:LexicalEntry} .\n",
+    "            { ?n_form a ontolex:Form} .\n",
+    "            { ?n_sense a ontolex:LexicalSense} .\n",
+    "            { ?n_syndef a diamant:SynonymDefinition} .\n",
+    "            { ?n_sensedef a lemon:SenseDefinition} .\n",
+    "            { ?n_syndef diamant:definitionText ?n_syndef_definitionText } .\n",
+    "            { ?n_sensedef diamant:definitionText ?n_sensedef_definitionText } .\n",
+    "            { ?n_entry ontolex:canonicalForm ?n_form } .\n",
+    "            { ?n_entry ontolex:sense ?n_sense } .\n",
+    "            { ?n_sense lemon:definition ?n_syndef } .\n",
+    "            { ?n_sense lemon:definition ?n_sensedef } .\n",
+    "              ?n_sense diamant:attestation ?n_attest_show .\n",
+    "              ?n_sense diamant:attestation ?n_attest_filter .\n",
+    "              ?n_attest_show diamant:text ?n_q_show .\n",
+    "              ?n_attest_filter diamant:text ?n_q_filter .\n",
+    "              ?n_attest_show a diamant:Attestation .\n",
+    "              ?n_attest_filter a diamant:Attestation .\n",
+    "              ?n_q_filter a diamant:Quotation .\n",
+    "              ?n_q_show a diamant:Quotation .\n",
+    "              ?n_q_filter diamant:witnessYearFrom ?wy_f_filter .\n",
+    "              ?n_q_filter diamant:witnessYearTo ?wy_t_filter .\n",
+    "              ?n_q_show diamant:witnessYearFrom ?wy_f_show .\n",
+    "              ?n_q_show diamant:witnessYearTo ?wy_t_show .\n",
+    "              FILTER (xsd:integer(?wy_f_show) >= 1200)\n",
+    "              FILTER (xsd:integer(?wy_t_show) >= 1200)\n",
+    "              FILTER (xsd:integer(?wy_f_show) <= 2018)\n",
+    "              FILTER (xsd:integer(?wy_t_show) <= 2018)\n",
+    "            { bind(\"lemma\" as ?inputMode) } .\n",
+    "            } UNION\n",
+    "          {\n",
+    "            { ?n_syndef diamant:definitionText ?n_syndef_definitionText .\n",
+    "            values ?n_syndef_definitionText  { \\\"\"\"\" + word + \"\"\"\\\" } } .\n",
+    "            { ?n_sense a ontolex:LexicalSense} .\n",
+    "            { ?n_syndef a diamant:SynonymDefinition} .\n",
+    "            { ?n_sensedef a lemon:SenseDefinition} .\n",
+    "            { ?n_form a ontolex:Form} .\n",
+    "            { ?n_form ontolex:writtenRep ?n_ontolex_writtenRep } .  { ?n_entry a ontolex:LexicalEntry} .\n",
+    "            { ?n_entry ontolex:sense ?n_sense } .\n",
+    "            { ?n_sense lemon:definition ?n_syndef } .\n",
+    "            { ?n_sense lemon:definition ?n_sensedef } .\n",
+    "            { ?n_sensedef diamant:definitionText ?n_sensedef_definitionText } .\n",
+    "            { ?n_entry ontolex:canonicalForm ?n_form } .\n",
+    "            ?n_sense diamant:attestation ?n_attest_show .\n",
+    "            ?n_sense diamant:attestation ?n_attest_filter .\n",
+    "            ?n_attest_filter diamant:text ?n_q_filter .\n",
+    "            ?n_attest_show diamant:text ?n_q_show .\n",
+    "            ?n_q_filter diamant:witnessYearFrom ?wy_f_filter .\n",
+    "            ?n_q_filter diamant:witnessYearTo ?wy_t_filter .\n",
+    "            ?n_q_show diamant:witnessYearFrom ?wy_f_show .\n",
+    "            ?n_q_show diamant:witnessYearTo ?wy_t_show .\n",
+    "            ?n_attest_show a diamant:Attestation .\n",
+    "            ?n_attest_filter a diamant:Attestation .\n",
+    "            ?n_q_filter a diamant:Quotation .\n",
+    "            ?n_q_show a diamant:Quotation .\n",
+    "            FILTER (xsd:integer(?wy_f_show) >= 1200)\n",
+    "            FILTER (xsd:integer(?wy_t_show) >= 1200)\n",
+    "            FILTER (xsd:integer(?wy_f_show) <= 2018)\n",
+    "            FILTER (xsd:integer(?wy_t_show) <= 2018)\n",
+    "          { bind(\"defText\" as ?inputMode) } .\n",
+    "            }\n",
+    "        }\n",
+    "        }\"\"\"\n",
+    "\n",
+    "        return query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Search:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "import xml.etree.ElementTree as ET\n",
+    "import json\n",
+    "\n",
+    "def parse_xml(text):\n",
+    "    # TODO: should we secure against untrusted XML?\n",
+    "    root = ET.fromstring(text)\n",
+    "    records = []\n",
+    "    computed_nwih = False\n",
+    "    for entry in root.iter(\"{http://clarin.eu/fcs/resource}ResourceFragment\"):\n",
+    "        for dataView in entry.findall(\"{http://clarin.eu/fcs/resource}DataView\"):\n",
+    "            # We only take into account hits, ignore metadata and segmenting dataViews\n",
+    "            if (dataView.get(\"type\")==\"application/x-clarin-fcs-hits+xml\"):\n",
+    "                result = dataView.find(\"{http://clarin.eu/fcs/dataview/hits}Result\")\n",
+    "                left_context = result.text if result.text is not None else ''\n",
+    "                hits = list(result)\n",
+    "                last_hit = hits[-1]\n",
+    "                right_context = last_hit.tail if last_hit.tail is not None else ''\n",
+    "                hit_words = [hit.text for hit in hits]\n",
+    "                \n",
+    "                if not computed_nwih:\n",
+    "                    n_words_in_hit = len(hits)\n",
+    "                    computed_nwih=True\n",
+    "                kwic = [left_context] + hit_words + [right_context]\n",
+    "                records.append(kwic)\n",
+    "    columns = [\"left context\"] + [\"word \" + str(n) for n in range(n_words_in_hit)] + [\"right context\"]\n",
+    "    return pd.DataFrame(records, columns = columns)\n",
+    "\n",
+    "def search_corpus(query, corpus):\n",
+    "    # Do request to federated content search corpora, so we get same output format for every corpus\n",
+    "    url = \"http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&x-fcs-context=\" + corpus + \"&maximumRecords=20&query=\" + query\n",
+    "    response = requests.get(url)\n",
+    "    response_text = response.text\n",
+    "    df = parse_xml(response_text)\n",
+    "    return df\n",
+    "   \n",
+    "def search_lexicon(query,corpus):\n",
+    "    endpoint = \"http://svprre02:8080/fuseki/tdb/sparql\"\n",
+    "    url = endpoint #+ \"?query=\" + query\n",
+    "    response = requests.post(url,data={\"query\":query})\n",
+    "    response_json = json.loads(response.text)\n",
+    "    records_json = response_json[\"results\"][\"bindings\"]\n",
+    "    records_string = json.dumps(records_json)\n",
+    "    df = pd.read_json(records_string, orient=\"records\")\n",
+    "    df = df.applymap(lambda x: x[\"value\"])\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Corpus search"
    ]
   },
@@ -23,13 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fc5da5e7da34449b3de80b0a99e2c1a",
+       "model_id": "fc232660456c400f8b8e5c45f62c5dc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,10 +301,10 @@
     }
    ],
    "source": [
-    "from chaininglib import ui\n",
+    "#from chaininglib import ui\n",
     "\n",
     "# Create corpus UI, creates references to field contents\n",
-    "corpusQueryField, corpusField = ui.create_corpus_ui()"
+    "corpusQueryField, corpusField = create_corpus_ui()"
    ]
   },
   {
@@ -182,11 +441,14 @@
     }
    ],
    "source": [
-    "from chaininglib import search\n",
+    "#from chaininglib import search\n",
     "\n",
     "query= corpusQueryField.value\n",
     "corpus = corpusField.value\n",
-    "df_corpus = search.search_corpus(query,corpus)\n",
+    "def test(a=\"a\", b=\"b\"):\n",
+    "    return function\n",
+    "df_corpus = search_corpus(query,corpus, limit=1000, option=b)\n",
+    "search().corpus(\"chn\").option(a).execute()\n",
     "display(df_corpus)\n",
     "\n"
    ]
@@ -207,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -215,7 +477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "564295e2c96b42bfbe13b2b09c9bf985",
+       "model_id": "01a712b4a67f4a7e9897d0c6f2578031",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,7 +490,7 @@
     }
    ],
    "source": [
-    "from chaininglib import ui\n",
+    "#from chaininglib import ui\n",
     "searchWordField, lexiconField = ui.create_lexicon_ui()"
    ]
   },
@@ -236,13 +498,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Search!\n",
     " * Run the cell below to search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -964,14 +1225,14 @@
     }
    ],
    "source": [
-    "from chaininglib import queries, search\n",
+    "#from chaininglib import queries, search\n",
     "\n",
     "search_word = searchWordField.value\n",
     "lexicon = lexiconField.value\n",
     "# USER: can replace this by own custom query\n",
-    "query = queries.get_query(word=search_word, lexicon=lexicon)\n",
+    "query = get_query(word=search_word, lexicon=lexicon)\n",
     "\n",
-    "df_lexicon = search.search_lexicon(query, lexicon)\n",
+    "df_lexicon = search_lexicon(query, lexicon)\n",
     "df_lexicon_relevant = df_lexicon[[\"inputMode\", \"n_ontolex_writtenRep\", \"n_syndef_definitionText\", \"n_sensedef_definitionText\", \"wy_f_show\", \"wy_t_show\"]]\n",
     "display(df_lexicon_relevant)"
    ]
@@ -987,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1540,7 @@
     {
      "data": {
       "text/html": [
-       "Werkwoorden voor <b>puur</b> niet in <b>zuiver</b>: worden, gaat, willen, gebaseerd, vertelt, bedoeld, gestoeld"
+       "Werkwoorden voor <b>puur</b> niet in <b>zuiver</b>: worden, vertelt, bedoeld, gebaseerd, gestoeld, gaat, willen"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1291,7 +1552,7 @@
     {
      "data": {
       "text/html": [
-       "Werkwoorden voor <b>zuiver</b> niet in <b>puur</b>: zingen, genomen, moeten, beperken, vastgelegd, houdt, beweert"
+       "Werkwoorden voor <b>zuiver</b> niet in <b>puur</b>: beperken, vastgelegd, zingen, beweert, houdt, genomen, moeten"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1302,20 +1563,20 @@
     }
    ],
    "source": [
-    "from chaininglib import search\n",
+    "#from chaininglib import search\n",
     "from IPython.core.display import display, HTML\n",
     "\n",
     "# Word 1: puur\n",
     "query1= r'[word=\"puur\"][pos=\"verb\"]'\n",
     "corpus1 = \"chn\"\n",
-    "df_corpus1 = search.search_corpus(query1,corpus1)\n",
+    "df_corpus1 = search_corpus(query1,corpus1)\n",
     "display(HTML('<b>puur</b>'))\n",
     "display(df_corpus1)\n",
     "\n",
     "# Word 2: zuiver\n",
     "query2= r'[word=\"zuiver\"][pos=\"verb\"]'\n",
     "corpus2 = \"chn\"\n",
-    "df_corpus2 = search.search_corpus(query2,corpus2)\n",
+    "df_corpus2 = search_corpus(query2,corpus2)\n",
     "display(HTML('<b>zuiver</b>'))\n",
     "display(df_corpus2)\n",
     "\n",
