--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
-    "DEFAULT_QUERY = r'[lemma=\"boek\"]'\n",
+    "DEFAULT_QUERY = r'[lemma=\"boek\" & pos=\"verb\"]' #r'[lemma=\"boeken\" pos=\"verb\"]'\n",
     "DEFAULT_CORPUS = \"chn\"\n",
     "\n",
     "def create_corpus_ui():\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,7 @@
     "    # TODO: should we secure against untrusted XML?\n",
     "    root = ET.fromstring(text)\n",
     "    records = []\n",
+    "    n_words_in_hit = 0\n",
     "    computed_nwih = False\n",
     "    for entry in root.iter(\"{http://clarin.eu/fcs/resource}ResourceFragment\"):\n",
     "        for dataView in entry.findall(\"{http://clarin.eu/fcs/resource}DataView\"):\n",
@@ -282,18 +283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc232660456c400f8b8e5c45f62c5dc7",
+       "model_id": "c5f0bce2e073413b8f6284ef99b9ae60",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Text(value='[lemma=\"boek\"]', description='<b>CQL query:</b>'), Dropdown(description='<b>Corpus:…"
+       "VBox(children=(Text(value='[lemma=\"boek\" & pos=\"verb\"]', description='<b>CQL query:</b>'), Dropdown(descriptio…"
       ]
      },
      "metadata": {},
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -445,10 +446,7 @@
     "\n",
     "query= corpusQueryField.value\n",
     "corpus = corpusField.value\n",
-    "def test(a=\"a\", b=\"b\"):\n",
-    "    return function\n",
-    "df_corpus = search_corpus(query,corpus, limit=1000, option=b)\n",
-    "search().corpus(\"chn\").option(a).execute()\n",
+    "df_corpus = search_corpus(query,corpus)\n",
     "display(df_corpus)\n",
     "\n"
    ]
@@ -469,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -477,7 +475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01a712b4a67f4a7e9897d0c6f2578031",
+       "model_id": "d958a7ed4b654f58ba96277e82053d75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -491,7 +489,7 @@
    ],
    "source": [
     "#from chaininglib import ui\n",
-    "searchWordField, lexiconField = ui.create_lexicon_ui()"
+    "searchWordField, lexiconField = create_lexicon_ui()"
    ]
   },
   {
@@ -503,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1538,7 @@
     {
      "data": {
       "text/html": [
-       "Werkwoorden voor <b>puur</b> niet in <b>zuiver</b>: worden, vertelt, bedoeld, gebaseerd, gestoeld, gaat, willen"
+       "Werkwoorden voor <b>puur</b> niet in <b>zuiver</b>: gaat, gebaseerd, gestoeld, vertelt, bedoeld, worden, willen"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1552,7 +1550,19 @@
     {
      "data": {
       "text/html": [
-       "Werkwoorden voor <b>zuiver</b> niet in <b>puur</b>: beperken, vastgelegd, zingen, beweert, houdt, genomen, moeten"
+       "Werkwoorden voor <b>zuiver</b> niet in <b>puur</b>: genomen, moeten, beweert, zingen, houdt, beperken, vastgelegd"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Werkwoorden zowel voor <b>zuiver</b> als voor <b>puur</b>: is"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1588,7 +1598,10 @@
     "display(HTML('Werkwoorden voor <b>puur</b> niet in <b>zuiver</b>: ' + \", \".join(diff_left)))\n",
     "# Elements of 2 that are not in 1\n",
     "diff_right = set_df2.difference(set_df1)\n",
-    "display(HTML('Werkwoorden voor <b>zuiver</b> niet in <b>puur</b>: ' + \", \".join(diff_right)))"
+    "display(HTML('Werkwoorden voor <b>zuiver</b> niet in <b>puur</b>: ' + \", \".join(diff_right)))\n",
+    "# Elements both in 1 and 2\n",
+    "intersec = set_df1.intersection(set_df2);\n",
+    "display(HTML('Werkwoorden zowel voor <b>zuiver</b> als voor <b>puur</b>: ' + \", \".join(intersec)))"
    ]
   },
   {
@@ -1615,7 +1628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
